# RustyLox

./: .dockerignore  .env.example  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXES_2026-03-16.md  INSTALL.md  LICENSE  MQTT_FILTER_REFACTOR.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5_PLAN.md  PHASE6_COMPLETE.md  PHASE6_PLAN.md  PHASE7A_COMPLETE.md  PHASE7A_PLAN.md  PHASE7_PLAN.md  PLAN_UPDATE_PHASE4.md  README.md  ROADMAP.md  TEST_RESULTS.md  audit.toml  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  rustylox-recap.html  test-phase2.sh  test-phase3.sh
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: mosquitto.conf.example
crates/addon-registry/: Cargo.toml
crates/addon-registry/src/: catalog.rs  lib.rs  model.rs  persistence.rs  proxy.rs  registry.rs
crates/auth/: Cargo.toml
crates/auth/src/: audit.rs  error.rs  jwt.rs  lib.rs  models.rs  password.rs  service.rs  session.rs  store.rs
crates/backup-manager/: Cargo.toml
crates/backup-manager/src/: backup.rs  lib.rs  restore.rs  scheduler.rs
crates/email-manager/: Cargo.toml
crates/email-manager/src/: config.rs  lib.rs  smtp.rs  templates.rs
crates/loxberry-config/: Cargo.toml
crates/loxberry-config/src/: general.rs  lib.rs  miniserver.rs  mqtt.rs  validation.rs
crates/loxberry-core/: Cargo.toml
crates/loxberry-core/src/: error.rs  lib.rs  types.rs
crates/loxberry-daemon/: Cargo.toml
crates/loxberry-daemon/src/: main.rs
crates/loxberry-logging/: Cargo.toml
crates/loxberry-logging/src/: config.rs  lib.rs  plugin_logger.rs  rotation.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: collector.rs  health.rs  lib.rs  prometheus.rs
crates/miniserver-client/: Cargo.toml
crates/miniserver-client/src/: delta_cache.rs  http.rs  lib.rs  reboot_detector.rs  udp.rs  udp_receiver.rs
crates/miniserver-client/tests/: udp_receiver_integration.rs
crates/mqtt-gateway/: Cargo.toml
crates/mqtt-gateway/src/: broker_client.rs  lib.rs  mqtt_finder.rs  relay.rs  relay_tracker.rs  stats.rs  subscription.rs  transformer.rs  udp_listener.rs
crates/mqtt-gateway/tests/: udp_miniserver_format_test.rs
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/src/: config_parser.rs  cron.rs  daemon.rs  database.rs  directory_manager.rs  environment.rs  executor.rs  installer.rs  lib.rs  lifecycle.rs
crates/plugin-manager/tests/: sonos_install.rs  weather4lox_install.rs
crates/rustylox-config/: Cargo.toml
crates/rustylox-config/src/: general.rs  lib.rs  mqtt.rs  validation.rs
crates/rustylox-core/: Cargo.toml
crates/rustylox-core/src/: error.rs
crates/rustylox-daemon/: Cargo.toml  build.rs
crates/rustylox-daemon/src/: main.rs
crates/rustylox-logging/: Cargo.toml
crates/rustylox-logging/src/: lib.rs  plugin_logger.rs  rotation.rs
crates/task-scheduler/: Cargo.toml
crates/task-scheduler/src/: config.rs  cron.rs  executor.rs  lib.rs  scheduler.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: lib.rs  state.rs  weather.rs
crates/web-api/src/middleware/: mod.rs  security_headers.rs
crates/web-api/src/routes/: addons.rs  auth.rs  backup.rs  config.rs  daemon.rs  email.rs  health.rs  metrics.rs  miniserver.rs  mod.rs  mqtt.rs  mqtt_stats.rs  network.rs  plugins.rs  system.rs  system_update.rs  tasks.rs  virtual_input.rs  weather.rs
crates/web-api/tests/: addons_end_to_end.rs  addons_registry.rs  virtual_input_test.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: lib.rs  middleware.rs  templates.rs
crates/web-ui/src/handlers/: addons.rs  api_docs.rs  auth.rs  backup.rs  dashboard.rs  database.rs  email.rs  health.rs  logs.rs  miniserver.rs  miniserver_backup.rs  mod.rs  mqtt.rs  mqtt_finder.rs  mqtt_management.rs  mqtt_stats.rs  network.rs  plugin_web.rs  plugins.rs  profile.rs  security.rs  settings.rs  system_update.rs  tasks.rs  weather.rs
crates/web-ui/templates/: api_docs.html  backup.html  base.html  dashboard.html  email.html  health.html  login.html  logs.html  network.html  profile.html  settings.html  system_update.html  tasks.html  tasks_edit.html
crates/web-ui/templates/addons/: list.html  settings.html  ui.html
crates/web-ui/templates/admin/: api_keys.html  audit.html  database.html  security.html  users.html
crates/web-ui/templates/miniserver/: backup.html  edit.html  list.html  monitor.html
crates/web-ui/templates/mqtt/: config.html  finder.html  monitor.html  stats.html
crates/web-ui/templates/plugins/: details.html  install.html  list.html
crates/web-ui/templates/weather/: config.html  index.html
crates/web-ui/tests/: plugin_web_routes.rs
docs/: api.md  architecture.md  configuration.md  development.md  miniserver-communication.md  plugins.md  vitoconnect-integration.md
docs/archive/: PHASE1_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_PLAN.md
docs/loxone-api/: README.md  miniserver-communication.md  pms-access-api.md  web-services.md
docs/superpowers/plans/: 2026-07-17-containerized-addons.md
docs/superpowers/specs/: 2026-07-17-containerized-addons-design.md
examples/sample-plugin/: README.md  plugin.cfg  postinstall.sh  preinstall.sh  uninstall.sh
examples/sample-plugin/webfrontend/htmlauth/: index.html
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: miniserver_sim.py
sdk/bashlib/: loxberry_system.sh
sdk/phplib/: loxberry_bootstrap.php  loxberry_system.php
sdk/templates/system/: head.html  pageend.html  pagestart.html
static/css/: style.css
static/js/: app.js  i18n.js
