[workspace]
members = [
    "crates/loxberry-core",
    "crates/loxberry-config",
    "crates/miniserver-client",
    "crates/plugin-manager",
    "crates/mqtt-gateway",
    "crates/web-api",
    "crates/web-ui",
    "crates/loxberry-daemon",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration
config = "0.14"

# Collections
dashmap = "6.0"

# Temp files
tempfile = "3.8"
