[package]
name = "addon-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rustylox-core = { path = "../rustylox-core" }

[dev-dependencies]
axum = { workspace = true }
tempfile = { workspace = true }
