[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rustylox-core = { path = "../rustylox-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9.3"

# UUID generation
uuid = { version = "1.8", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Cryptographic hashing
sha2 = "0.10"

# Async collections
dashmap = { workspace = true }

# Axum integration for middleware
axum = { workspace = true }
tower = { workspace = true }
