[package]
name = "backup-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zip = "2.1"
tracing = "0.1"
walkdir = "2.5"

[dependencies.rustylox-core]
path = "../rustylox-core"
