[package]
name = "email-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
loxberry-core = { path = "../loxberry-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Email sending
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
