[package]
name = "loxberry-config"
version = "0.1.0"
edition = "2021"

[dependencies]
loxberry-core = { path = "../loxberry-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
