[package]
name = "loxberry-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loxberry-daemon"
path = "src/main.rs"

[dependencies]
auth = { path = "../auth" }
loxberry-core = { path = "../loxberry-core" }
loxberry-config = { path = "../loxberry-config" }
miniserver-client = { path = "../miniserver-client" }
mqtt-gateway = { path = "../mqtt-gateway" }
web-api = { path = "../web-api" }
web-ui = { path = "../web-ui" }

chrono = "0.4"

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
