[package]
name = "rustylox-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
rustylox-core = { path = "../rustylox-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# System information
sysinfo = "0.32"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
