[package]
name = "mqtt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
rustylox-core = { path = "../rustylox-core" }
rustylox-config = { path = "../rustylox-config" }
miniserver-client = { path = "../miniserver-client" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# MQTT client
rumqttc = "0.24"

# Subscription parsing
serde_ini = "0.2"
regex = "1.10"

# File watching for hot-reload
notify = "6.1"

# Process execution for transformers
glob = "0.3"

# Statistics tracking
dashmap = "6.0"
