[package]
name = "rustylox-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustylox-daemon"
path = "src/main.rs"

[dependencies]
auth = { path = "../auth" }
rustylox-core = { path = "../rustylox-core" }
rustylox-config = { path = "../rustylox-config" }
miniserver-client = { path = "../miniserver-client" }
mqtt-gateway = { path = "../mqtt-gateway" }
web-api = { path = "../web-api" }
web-ui = { path = "../web-ui" }

chrono = "0.4"

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
