[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../auth" }
loxberry-core = { path = "../loxberry-core" }
loxberry-config = { path = "../loxberry-config" }
loxberry-metrics = { path = "../metrics" }
email-manager = { path = "../email-manager" }
task-scheduler = { path = "../task-scheduler" }
miniserver-client = { path = "../miniserver-client" }
plugin-manager = { path = "../plugin-manager" }
mqtt-gateway = { path = "../mqtt-gateway" }
backup-manager = { path = "../backup-manager" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Shared state
dashmap = { workspace = true }

# Time handling for timestamps
chrono = "0.4"

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Temp files
tempfile = { workspace = true }

# Streaming file downloads
tokio-util = { version = "0.7", features = ["io"] }

# Rate limiting
tower_governor = { version = "0.4", features = ["axum"] }

# System info for network diagnostics
sysinfo = "0.32"

# HTTP client (for Open-Meteo weather API)
reqwest = { workspace = true }
